# Adapt

./: CMakeLists.txt  LICENSE
include/: Adapt.hpp
src/: Adapt.cpp
